# anthropic_computer_use_ec2

./: .gitignore  README.md  allow_sg_ports.sh  run_instance.sh
backend/: allow_sg_ports.sh  kill_instance.sh  main.py  pyproject.toml  run_instance.sh
